--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "letsstudy",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,5 +19,7 @@
     "express": "^4.17.2",
     "mongodb": "^4.3.1",
     "socket.io": "^2.1.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
