--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.2",
+    "firebase": "^9.6.10",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "socket.io": "^2.1.0"
